--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/base": "^5.0.0-beta.66",
     "@mui/icons-material": "^5.16.8",
     "@mui/material": "^5.16.11",
