--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@mui/base": "^5.0.0-beta.66",
     "@mui/icons-material": "^5.16.8",
     "@mui/material": "^5.16.11",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.2",
     "hls.js": "^1.4.14",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "next": "^14.2.20",
     "next-video": "^1.1.1",
     "react": "^18",
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "react-toastify": "^10.0.5",
     "server-only": "^0.0.1"
   },
